--- a/tool-framework/package.json
+++ b/tool-framework/package.json
@@ -9,11 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/pagination": "^2.0.36",
+    "@nextui-org/progress": "^2.0.33",
+    "@nextui-org/radio": "^2.1.4",
+    "@nextui-org/react": "^2.4.6",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
+    "@nextui-org/user": "^2.0.33",
+    "@react-aria/focus": "^3.17.1",
+    "antd": "^5.21.1",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
+    "framer-motion": "^11.3.30",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
+    "html-react-parser": "^5.1.12",
+    "lucide-react": "^0.436.0",
     "next": "14.2.13",
+    "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-aria": "^3.33.1",
+    "react-dom": "^18",
+    "react-ribbons": "^1.1.7",
+    "react-spring": "^9.7.3",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
