--- a/tool-framework/package.json
+++ b/tool-framework/package.json
@@ -18,8 +18,10 @@
     "@nextui-org/user": "^2.0.33",
     "@react-aria/focus": "^3.17.1",
     "antd": "^5.21.1",
+    "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.3.30",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
@@ -27,20 +29,23 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-aria": "^3.33.1",
     "react-dom": "^18",
     "react-ribbons": "^1.1.7",
     "react-spring": "^9.7.3",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
